[project]
name = "cookie-py"
version = "3.0.0"
description = "Modern Python project template using Copier, uv, ruff, and pyright"
authors = [
    {name = "Felipe 'Bidu' Rodrigues", email = "felipe@felipevr.com"}
]
license = {text = "GPL-3.0"}
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "copier>=9.1.0",
    "prek>=0.4",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tests", "tasks"]

[tool.pytest.ini_options]
addopts = """
    -ra -vv
    --cov=tasks
    --cov-report term-missing:skip-covered
    -m "not slow"
"""
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific
]
ignore = [
    "E501",   # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]  # Allow assert statements in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["tests", "tasks"]
exclude = ["**/__pycache__", "template"]
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "strict"
