[tool.poetry]
authors = ["{{cookiecutter.author}}"]
description = "{{cookiecutter.description}}"
license = "{{cookiecutter.license}}"
name = "{{cookiecutter.directory_name}}"
version = "{{cookiecutter.version}}"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = {version = "^21.9b", allow-prereleases = true}
flake8 = "^4.0.1"
ipython = "^7.18"
pdbpp = "^0.10.3"
pylint = "^2.4"
pytest = {version = "^6.2"}
pytest-cov = "^3.0"
pytest-randomly = "^3.10.1"
pytest-xdist = "^2.4.0"


[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = """
    -ra -vv
    --cov={{cookiecutter.pkg_name}}
    --cov-report term-missing:skip-covered
    --doctest-modules
    -n 4
"""

minversion = "6.0"
testpaths = [
  "tests",
]
