[tool.poetry]
authors = ["{{cookiecutter.author}}"]
description = "{{cookiecutter.description}}"
license = "{{cookiecutter.license}}"
name = "{{cookiecutter.directory_name}}"
version = "{{cookiecutter.version}}"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
bandit = "^1.7.5"
ruff = "^0.0.270"
black = "^23.3.0"
ipython = "^8.13.2"
pdbpp = "^0.10.3"
pylint = "^2.17.4"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
pytest-randomly = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = """
    -ra -vv
    --cov={{cookiecutter.pkg_name}}
    --cov-report term-missing:skip-covered
    --doctest-modules
    -n 4
"""

minversion = "6.0"
testpaths = [
  "tests",
]
