[project]
name = "{{cookiecutter.directory_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = [{ name = "{{cookiecutter.author}}" }]
license = "{{cookiecutter.license}}"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{cookiecutter.pkg_name}}"]

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.0",
    "ipython>=8.30.0",
    "pdbpp>=0.10.3",
    "pyright>=1.1.390",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.15.0",
    "pytest-xdist>=3.6.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
addopts = """
    -ra -vv
    --cov={{cookiecutter.pkg_name}}
    --cov-report term-missing:skip-covered
    --doctest-modules
    -n auto
"""
minversion = "8.0"
testpaths = ["tests"]

[tool.ruff]
target-version = "py{{cookiecutter.python_version | replace('.', '')}}"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific
    "PLR",
]
ignore = [
    "E501",    # line too long, handled by formatter
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["{{cookiecutter.pkg_name}}", "tests"]
exclude = ["**/__pycache__"]
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
pythonVersion = "{{cookiecutter.python_version}}"
typeCheckingMode = "strict"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
